# tapciify-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  openapi.yaml  openapi.yml
.github/workflows/: ci.yml  release.yml  test.yml
src/: lib.rs  main.rs  query.rs  structs.rs  swagger.html  swagger.rs
src/routes/: convert.rs  convert_raw.rs  mod.rs  root.rs
src/routes/api/: mod.rs
src/routes/api/v1/: convert.rs  convert_raw.rs  mod.rs  query.rs  utils.rs
src/routes/api/v2/: convert.rs  convert_raw.rs  mod.rs  settings.rs
src/routes/v1/: mod.rs  utils.rs
src/v1/: mod.rs  openapi.yml  utils.rs
