[package]
name = "tapciify-api"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart", "tracing"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-swagger-ui = "0.3.0"
image = { version = "0.25", features = [
    "default-formats",
], default_features = false }
serde = { version = "1.0", features = ["derive"] }
tapciify = { version = "3.1", default-features = false }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
