[package]
name = "tapciify-api"
version = "0.2.1"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
description = "API wrapper for tapciify"
keywords = ["image", "ascii", "api"]
license = "MIT"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.87"

documentation = "https://api.tapciify.ru/"
repository = "https://github.com/tapciify/tapciify-api"
homepage = "https://github.com/tapciify/tapciify-api"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart", "tracing"] }
image = { version = "0.25", features = [
    "default-formats",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tapciify = { version = "3", default-features = false }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
